<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_facultylist"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/menu_facultylist" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_signout" />

    </group>

    <item android:title="Modify">
        <menu>
            <item
                android:id="@+id/nav_markabsentees"
                android:icon="@drawable/ic_mode_edit_black_24dp"
                android:title="@string/menu_markabsentees" />
            <item
                android:id="@+id/nav_addfaculty"
                android:icon="@drawable/ic_person_add_black_24dp"
                android:title="@string/menu_addfaculty" />
            <item
                android:id="@+id/nav_removefaculty"
                android:icon="@drawable/ic_delete_black_24dp"
                android:title="@string/menu_removefaculty" />
        </menu>
    </item>

</menu>
